# bitly_nrf5x

./: CMakeLists.txt  Kconfig  README.rst  nrf5340dk_nrf5340_cpuapp.overlay  particle_xenon.overlay  prj.conf  prj_nrf5340dk_nrf5340_cpuapp.conf  prj_particle_xenon.conf  prj_particle_xenon_spi.conf  sample.yaml
.github/workflows/: build.yml
app_services/: Kconfig.performance_test  performance_test.c  throughput.c
child_image/: hci_rpmsg.conf  hci_rpmsg.overlay  hci_rpmsg_nrf5340dk_nrf5340_cpuapp.conf
include/: app_usb.h  bt_test.h  cmds.h  pio.h
include/app/: app_utils.h  bt_test.h  cmd.h  cmd_run.h  cmds.h  main.h  moving_avg.h  pio.h  spi_adc.h
include/app_services/: performance_test.h
lib/particle_button_and_leds/: CMakeLists.txt  Kconfig  particle_buttons_and_leds.c
src/: app_usb.c  bt_test.c  cmd_run.c  cmds.c  img.file  main.c  pio.c
src/app/: app_usb.c  app_utils.c  bt_test.c  cmd.c  cmd_ble.c  cmd_config.c  cmd_connect.c  cmd_ecg.c  cmd_run.c  cmd_run_adc.c  cmd_run_ber.c  cmd_run_sim.c  cmd_run_simple.c  cmd_show.c  cmds.c  img_file.h  leds.c  main.c  moving_avg.c  pio.c  sim_file.h  spi_adc.c  spi_pipe.c  spi_ringbuf.c
src/app_services/: Kconfig.performance_test  performance_test.c
